Remove unnecessary code to be more compatible with various libtasn1 versions

https://bugs.freedesktop.org/show_bug.cgi?id=60434